[gd_scene load_steps=51 format=2]

[ext_resource path="res://assets/menu/LOGO.png" type="Texture" id=1]
[ext_resource path="res://assets/menu/BM_1P.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/BM_3TC.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/MENU_BG.jpg" type="Texture" id=4]
[ext_resource path="res://assets/menu/BM_2I.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/BM_4LD.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/DM_PW.png" type="Texture" id=7]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=8]
[ext_resource path="res://scripts/api_connect.gd" type="Script" id=9]
[ext_resource path="res://assets/menu/BM_GEXB.png" type="Texture" id=10]
[ext_resource path="res://assets/menu/BM_1BPP10.png" type="Texture" id=11]
[ext_resource path="res://assets/menu/PM_PY.png" type="Texture" id=12]
[ext_resource path="res://assets/menu/BM_1AAD.png" type="Texture" id=13]
[ext_resource path="res://assets/menu/BM_DPP.png" type="Texture" id=14]
[ext_resource path="res://assets/menu/DM_ADL.png" type="Texture" id=15]
[ext_resource path="res://assets/menu/BM_CPP.png" type="Texture" id=16]
[ext_resource path="res://assets/menu/DM_PP10.png" type="Texture" id=17]
[ext_resource path="res://assets/menu/PRELOAD.png" type="Texture" id=18]
[ext_resource path="res://assets/menu/PRELOAD_2.png" type="Texture" id=19]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 1081, 1921 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "loading",
"speed": 13.0
} ]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 256, 34 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 256, 0, 256, 34 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 512, 0, 256, 34 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 768, 0, 256, 34 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 34, 256, 34 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 256, 34, 256, 34 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 512, 34, 256, 34 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 768, 34, 256, 34 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 68, 256, 34 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 256, 68, 256, 34 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 512, 68, 256, 34 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 768, 68, 256, 34 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 102, 256, 34 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 256, 102, 256, 34 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 512, 102, 256, 34 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 768, 102, 256, 34 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "loading",
"speed": 15.0
} ]

[sub_resource type="StyleBoxTexture" id=28]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 1000, 486 )

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 770, 418 )

[sub_resource type="StyleBoxTexture" id=30]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 770, 418 )

[sub_resource type="StyleBoxTexture" id=31]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 770, 418 )

[node name="[R] Menu" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource( 9 )

[node name="Background" type="Panel" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 640.0
margin_bottom = 1200.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MainContainer"]
margin_right = 560.0
margin_bottom = 318.0
size_flags_vertical = 3

[node name="Title" type="TextureRect" parent="MainContainer/MarginContainer"]
margin_right = 560.0
margin_bottom = 318.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="UIContainer" type="HBoxContainer" parent="MainContainer"]
margin_top = 322.0
margin_right = 560.0
margin_bottom = 1120.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5

[node name="MarginLeft" type="MarginContainer" parent="MainContainer/UIContainer"]
margin_right = 69.0
margin_bottom = 798.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Buttons" type="VBoxContainer" parent="MainContainer/UIContainer"]
margin_left = 73.0
margin_right = 487.0
margin_bottom = 798.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="MarginTop" type="HBoxContainer" parent="MainContainer/UIContainer/Buttons"]
margin_right = 414.0
margin_bottom = 77.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
custom_constants/separation = 15

[node name="MarginLeft" type="MarginContainer" parent="MainContainer/UIContainer/Buttons/MarginTop"]
margin_right = 85.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="LifeBox" type="HBoxContainer" parent="MainContainer/UIContainer/Buttons/MarginTop"]
margin_left = 100.0
margin_right = 313.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="LifeLoader" type="AnimatedSprite" parent="MainContainer/UIContainer/Buttons/MarginTop/LifeBox"]
position = Vector2( 105.436, 39.1441 )
scale = Vector2( 0.820254, 0.820254 )
frames = SubResource( 10 )
animation = "loading"
frame = 3

[node name="MarginRight" type="MarginContainer" parent="MainContainer/UIContainer/Buttons/MarginTop"]
margin_left = 328.0
margin_right = 414.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="LoaderMargin" type="MarginContainer" parent="MainContainer/UIContainer/Buttons"]
margin_top = 81.0
margin_right = 414.0
margin_bottom = 114.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="LoadAnimation" type="AnimatedSprite" parent="MainContainer/UIContainer/Buttons/LoaderMargin"]
visible = false
position = Vector2( 200.26, 27.9621 )
scale = Vector2( 0.598987, 0.563305 )
frames = SubResource( 27 )
animation = "loading"
frame = 8

[node name="PlayButton" type="TextureButton" parent="MainContainer/UIContainer/Buttons"]
margin_top = 118.0
margin_right = 414.0
margin_bottom = 229.0
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="GuideButton" type="TextureButton" parent="MainContainer/UIContainer/Buttons"]
margin_top = 233.0
margin_right = 414.0
margin_bottom = 343.0
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="LeaderboardButton" type="TextureButton" parent="MainContainer/UIContainer/Buttons"]
margin_top = 347.0
margin_right = 414.0
margin_bottom = 458.0
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="TnCButton" type="TextureButton" parent="MainContainer/UIContainer/Buttons"]
margin_top = 462.0
margin_right = 414.0
margin_bottom = 572.0
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="MarginBottom" type="MarginContainer" parent="MainContainer/UIContainer/Buttons"]
margin_top = 576.0
margin_right = 414.0
margin_bottom = 798.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="MarginRight" type="MarginContainer" parent="MainContainer/UIContainer"]
margin_left = 491.0
margin_right = 560.0
margin_bottom = 798.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="PayOption" type="Control" parent="."]
visible = false
margin_right = 720.0
margin_bottom = 1280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionContainer" type="PanelContainer" parent="PayOption"]
visible = false
margin_left = 150.0
margin_top = 500.0
margin_right = 570.0
margin_bottom = 700.0
custom_styles/panel = SubResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentContainer" type="HBoxContainer" parent="PayOption/OptionContainer"]
margin_right = 420.0
margin_bottom = 200.0

[node name="Margin2" type="MarginContainer" parent="PayOption/OptionContainer/ContentContainer"]
margin_right = 41.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="PoinButton" type="TextureButton" parent="PayOption/OptionContainer/ContentContainer"]
margin_left = 45.0
margin_right = 185.0
margin_bottom = 200.0
size_flags_horizontal = 3
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="Margin3" type="MarginContainer" parent="PayOption/OptionContainer/ContentContainer"]
margin_left = 189.0
margin_right = 230.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="AdButton" type="TextureButton" parent="PayOption/OptionContainer/ContentContainer"]
margin_left = 234.0
margin_right = 374.0
margin_bottom = 200.0
size_flags_horizontal = 3
texture_normal = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="Margin" type="MarginContainer" parent="PayOption/OptionContainer/ContentContainer"]
margin_left = 378.0
margin_right = 420.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="CloseOptionButton" type="TextureButton" parent="PayOption"]
visible = false
margin_left = 515.0
margin_top = 464.0
margin_right = 628.0
margin_bottom = 576.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationPanel" type="Panel" parent="PayOption"]
visible = false
margin_left = 120.0
margin_top = 450.0
margin_right = 600.0
margin_bottom = 780.0
custom_styles/panel = SubResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgreeButton" type="TextureButton" parent="PayOption/ConfirmationPanel"]
margin_left = 250.0
margin_top = 290.0
margin_right = 430.0
margin_bottom = 370.0
texture_normal = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisagreeButton" type="TextureButton" parent="PayOption/ConfirmationPanel"]
margin_left = 50.0
margin_top = 290.0
margin_right = 230.0
margin_bottom = 370.0
texture_normal = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingPanel" type="Panel" parent="PayOption"]
visible = false
margin_left = 120.0
margin_top = 450.0
margin_right = 600.0
margin_bottom = 780.0
custom_styles/panel = SubResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningPanel" type="Panel" parent="."]
visible = false
margin_left = 140.0
margin_top = 580.0
margin_right = 580.0
margin_bottom = 850.0
custom_styles/panel = SubResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="WarningPanel"]
visible = false
margin_left = 386.971
margin_top = 1.31372
margin_right = 436.971
margin_bottom = 41.3137
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainContainer/UIContainer/Buttons/PlayButton" to="." method="on_Play_Button_pressed"]
[connection signal="pressed" from="MainContainer/UIContainer/Buttons/GuideButton" to="." method="on_Guide_Button_pressed"]
[connection signal="pressed" from="MainContainer/UIContainer/Buttons/LeaderboardButton" to="." method="on_Leaderboard_Button_pressed"]
[connection signal="pressed" from="MainContainer/UIContainer/Buttons/TnCButton" to="." method="on_TnC_Button_pressed"]
[connection signal="pressed" from="PayOption/OptionContainer/ContentContainer/PoinButton" to="." method="on_PoinButton_pressed"]
[connection signal="pressed" from="PayOption/OptionContainer/ContentContainer/AdButton" to="." method="on_AdButton_pressed"]
[connection signal="pressed" from="PayOption/CloseOptionButton" to="." method="on_CloseOptionButton_pressed"]
[connection signal="pressed" from="PayOption/ConfirmationPanel/AgreeButton" to="." method="on_AgreeButton_pressed"]
[connection signal="pressed" from="PayOption/ConfirmationPanel/DisagreeButton" to="." method="on_DisagreeButton_pressed"]
[connection signal="pressed" from="WarningPanel/CloseButton" to="." method="on_CloseButton_pressed"]
